# Python-web-hw14-RESTAPI

./: README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
postgres-data/global/: 1260  1262  2671  pg_control
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
templates/: index.html
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
