[tool.poetry]
name = "HW14-Contacts-RESTAPI"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m11_02"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.3"
alembic = "^1.9.3"
psycopg2 = "^2.9.5"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
faker = "^19.13.0"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.0"
redis = "4.2"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.36.0"
pydantic = {extras = ["email"], version = "==2.5.2"}


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
black = "^23.11.0"
pytest = "^7.4.3"


[tool.poetry.group.test.dependencies]
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
